--- a/core/templates/layouts/base.html
+++ b/core/templates/layouts/base.html
@@ -14,7 +14,15 @@
                 <li><a href="{% url 'home' %}">Home</a></li>
             </ul>
 
-            
+            <ul class="nav-right">
+                {% if user.is_authenticated %}
+                <li><a href="{% url 'logout' %}">Logout</a></li>
+                {% else %}
+                <li><a href="{% url 'login' %}">Login</a></li>
+                <li><a href="{% url 'register' %}">Register</a></li>
+                {% endif %}
+                
+            </ul>
         </nav>
     </header>
 
