--- a/core/templates/layouts/base.html
+++ b/core/templates/layouts/base.html
@@ -16,14 +16,20 @@
 
             <ul class="nav-right">
                 {% if user.is_authenticated %}
+                <li><a href="{% url 'tasks' %}">Tasks Pending</a></li>
+                <li><a href="{% url 'tasks_completed' %}">Tasks Completed</a></li>
+                <li><a href="{% url 'create_task' %}">Create Task</a></li>
                 <li><a href="{% url 'logout' %}">Logout</a></li>
+                
                 {% else %}
                 <li><a href="{% url 'login' %}">Login</a></li>
                 <li><a href="{% url 'register' %}">Register</a></li>
                 {% endif %}
 
                 {% if user.is_authenticated and user.is_superuser %}
-            <li><a href="/admin/" class="btn btn-primary">Panel Admin</a></li>
+            <li><a href="/admin/" class="btn btn-primary">{{user.username}}</a></li>
+            {% else %}
+            <li><a href="#">{{ user.username }}</a></li>
         {% endif %}
                 
             </ul>
