--- a/user_auth/templates/register.html
+++ b/user_auth/templates/register.html
@@ -1,20 +1,16 @@
 {% extends "layouts/base.html" %}
 {% load static %}
 {% block title %}Ingreso al sistema{% endblock %}
+{% block css %}
+<link rel="stylesheet" href="{% static 'css/register.css' %}">
+{% endblock %}
 {% block content %}
-<div class="container">
-    {% if messages %}
-{% for message in messages %}
-    <div class="alert alert-{{ message.tags }}">{{ message }}</div>
-{% endfor %}
-{% endif %}
 
-
-    <div class="row">
-        <div class="col-12 col-md6 offset-md-3">
-            <div class="card">
-                <div class="card-body">
-                    <h2>Crea tu usuario</h2>
+    <div class="container">
+        <div>
+            <div >
+                <div >
+                    <h2>Registra tu usuario</h2>
                     <hr>
                     <form method="post">
                         {% csrf_token %}
@@ -46,7 +42,7 @@
                                 <div class="text-danger">{{ error }}</div>
                             {% endfor %}
                         </div>
-                        <button type="submit" class="btn btn-primary">Registrar</button>
+                        <button type="submit">Registrar</button>
                     </form>
                     
                 </div>
