--- a/core/static/css/core/base.css
+++ b/core/static/css/core/base.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-between; /* Home a la izquierda, resto a la derecha */
     align-items: center;
-    background-color: #00cc00; /* Color del fondo */
+    background-color: #333; /* Color del fondo */
     border-radius: 5px;
     padding: 10px 20px;
 }
