feat(routines): implement functionality to add exercises to a routine and update to show the routines
- Added logic to dynamically handle exercise selection in `exercises.js` and `modal.js`.
- Enhanced `workout_create.html` to support adding exercises with dynamic inputs.
- Updated `routines.html` to display routine information more effectively.
- Created `routines_details.html` to show detailed routine information, including exercises.
- Adjusted `views.py` to validate and associate selected exercises with a routine during creation.
- Updated `urls.py` to include routes for routine creation and details.

--- a/gymtracker/templates/gymtracker/routines.html
+++ b/gymtracker/templates/gymtracker/routines.html
@@ -16,11 +16,12 @@
             <h3>Mis rutinas</h3>
             {% endif %}
             <ul>
-                {% for workout in workouts %}
-                <li>
-                    <a href="{% url 'workout' workout.id %}">{{ routine.name }}</a>
-                </li>
-                {% endfor %}
+                {% for rutina in rutinas %}
+    <li>
+        <a href="{% url 'detalle_rutina' rutina.id %}">{{ rutina.nombre }}</a>
+        <!-- Aquí puedes mostrar más detalles o linkear a otra vista -->
+    </li>
+    {% endfor %}
             </ul>
         </div>
     </div>
