--- a/gymtracker/templates/gymtracker/workout_create.html
+++ b/gymtracker/templates/gymtracker/workout_create.html
@@ -11,21 +11,20 @@
 <div class="container">
     <div class="routine">
         <h2 class="routine__title">Crear Nueva Rutina</h2>
-        <form action="{% url 'crear_rutina' %}" method="post" class="routine__form">
+        <form action="{% url 'crear_rutina' %}" id="myForm" method="post" class="routine__form">
             {% csrf_token %}
             <div class="routine__form-fields">
                 {{ form.as_p }}
             </div>
             <hr class="routine__divider">
             <button type="button" id="open-modal" class="routine__add-exercise">Añadir Ejercicio</button>
-            <input type="hidden" name="selected_exercises" id="selected-exercises">
-            <div class="routine__exercises" id="container-selected-exercises"></div>
             
             <hr class="routine__divider">
             
 
             <button type="submit" class="routine__submit">Guardar Rutina</button>
         </form>
+        <div id="contenedor-seleccionados"></div>
     </div>
 </div>
 
@@ -34,7 +33,7 @@
         <span class="modal__close" id="close">&times;</span>
         <h2 class="modal__title">Ejercicios</h2>
         <div class="modal__exercises" id="container-exercises"></div>
-        <button class="modal__add-exercise" id="add-exercise">Agregar</button>
+        <button class="modal__add-exercise" id="btn-guardar-seleccion">Agregar Ejercicios</button>
     </div>
 </div>
 {% endblock %}
