--- a/activitylogger/templates/activitylogger.html
+++ b/activitylogger/templates/activitylogger.html
@@ -13,7 +13,7 @@
     {% for activity in activity %}
     <div>
         <h2>Actividad: {{ activity.activity }}</h2>
-        <h3>Tiempo que inició: {{ activity.time_start|date:"H:i" }}pm</h3>
+        <h3>Momento de inicio: {{ activity.time_start|date:"H:i" }}</h3>
         <h3 id="elapsed-time-{{ activity.id }}" data-start-time="{{ activity.time_start|date:'Y-m-d H:i:s' }}">
             Tiempo transcurrido: 0:00:00
         </h3>
