fix: add activity api to get the currentHour from the server

--- a/activitylogger/templates/activitylogger.html
+++ b/activitylogger/templates/activitylogger.html
@@ -9,13 +9,11 @@
 {% endblock %}
 
 {% block content %}
-<h1>Cronómetro con Hora Actual</h1>
-<div id="clock">00:00:00</div>
 {% if activity %}
     {% for activity in activity %}
     <div>
         <h2>Actividad: {{ activity.activity }}</h2>
-        <h3>Momento de inicio: {{ activity.time_start|localtime|date:"H:i" }}</h3>
+        <h3>Momento de inicio: {{ activity.time_start|localtime|date:"H:i:s" }}</h3>
         <h3 id="elapsed-time-{{ activity.id }}" data-start-time="{{ activity.time_start|date:'Y-m-d H:i:s' }}">
             Tiempo transcurrido: 0:00:00
         </h3>
