--- a/tasks/templates/tasks/createTask.html
+++ b/tasks/templates/tasks/createTask.html
@@ -2,11 +2,34 @@
 {% block title %}Create Task{% endblock %}
 
 {% block content %}
-    <h1>Create Task</h1>
-    <hr>
-    <form action="{% url 'create_task' %}" method="post">
-        {% csrf_token %}
-        {{form}}
-        <button type="submit">Save</button>
-    </form>
+<div class="container my-5 d-flex justify-content-center">
+    <div class="col-12 col-md-6">
+        <h1 class="mb-4 text-center">Create Task</h1>
+        <hr>
+
+        <form action="{% url 'create_task' %}" method="post" class="p-4 border rounded bg-light shadow-sm">
+            {% csrf_token %}
+
+            
+            <div class="mb-3">
+                <label for="id_title" class="form-label">Title</label>
+                {{ form.title }}
+            </div>
+
+            <div class="mb-3">
+                <label for="id_description" class="form-label">Description</label>
+                {{ form.description }}
+            </div>
+
+            <div class="form-check mb-4">
+                {{ form.important }}
+                <label for="id_important" class="form-check-label">Important</label>
+            </div>
+
+            <div class="text-end">
+                <button type="submit" class="btn btn-primary">Save</button>
+            </div>
+        </form>
+    </div>
+</div>
 {% endblock %}
