--- a/core/templates/layouts/base.html
+++ b/core/templates/layouts/base.html
@@ -25,13 +25,14 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto me-3">
                         {% if user.is_authenticated %}
-                            <!-- Categoría Tareas -->
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'tasks' %}">Tasks</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'activity_logger' %}">Log</a>
+                            </li>
 
-                            <!-- Categoría Rutinas -->
-                            <li class="nav-item dropdown">
+                            <!-- <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="routinesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     Workouts
                                 </a>
@@ -40,7 +41,6 @@
                                 </ul>
                             </li>
 
-                            <!-- Categoría Metas -->
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="goalsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     Goals
@@ -48,19 +48,16 @@
                                 <ul class="dropdown-menu" aria-labelledby="goalsDropdown">
                                     <li><a class="dropdown-item" href="{% url 'goals' %}">Pending Goals</a></li>
                                 </ul>
-                            </li>
+                            </li> -->
 
-                            <!-- Logout -->
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                             </li>
                         {% else %}
-                            <!-- Login and Register for unauthenticated users -->
                             <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
                             <li class="nav-item"><a class="nav-link" href="{% url 'register' %}">Register</a></li>
                         {% endif %}
 
-                        <!-- Admin/Superuser Access -->
                         {% if user.is_authenticated and user.is_superuser %}
                             <li class="nav-item"><a class="nav-link" href="/admin/">Admin: {{ user.username }}</a></li>
                         {% else %}
@@ -92,7 +89,6 @@
     {% block js %}
         <!-- Bootstrap Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="{% static 'js/base.js' %}"></script>
     {% endblock %}
 </body>
 </html>
