--- a/activitylogger/templates/activitylogger.html
+++ b/activitylogger/templates/activitylogger.html
@@ -2,36 +2,50 @@
 {% load static %}
 {% load tz %}
 
-
 {% block css %}
     {{ block.super }}
     <link rel="stylesheet" href="{% static 'css/activitylogger.css' %}">
 {% endblock %}
 
 {% block content %}
+{{ block.super }}
+<h1 class="text-center my-4">Activity Logger</h1>
+<div class="text-center mb-4">
+    <a href="{% url 'finished_activities' %}" class="btn btn-secondary">View Finished Logs</a>
+</div>
 {% if activity %}
     {% for activity in activity %}
-    <div>
-        <h2>Actividad: {{ activity.activity }}</h2>
-        <h3>Momento de inicio: {{ activity.time_start|localtime|date:"H:i:s" }}</h3>
-        <h3 id="elapsed-time-{{ activity.id }}" data-start-time="{{ activity.time_start|localtime|date:'c' }}">
-            Tiempo transcurrido: 0:00:00
-        </h3>
-        <form action="{% url 'end_activity' activity.id %}" method="post">
-            {% csrf_token %}
-            <button type="submit">Terminar Actividad</button>
-        </form>
+    <div class="card mb-4 shadow-sm">
+        <div class="card-body">
+            <h2 class="card-title">Activity: {{ activity.activity }}</h2>
+            <h3 class="card-subtitle text-muted">Start Moment: {{ activity.time_start|localtime|date:"H:i:s" }}</h3>
+            <p id="elapsed-time-{{ activity.id }}" data-start-time="{{ activity.time_start|localtime|date:'c' }}" class="mt-3">
+                <strong>Elapsed Time:</strong> 00:00:00
+            </p>
+            <form action="{% url 'end_activity' activity.id %}" method="post">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-danger mt-3">Finish current Activity</button>
+            </form>
+        </div>
     </div>
     {% endfor %}
 {% else %}
-    <button id="start-activity">Iniciar Actividad</button>
-    <div id="activity-form" style="display: none;">
+    <div class="text-center">
+        <button id="start-activity" class="btn btn-primary my-4">Start new Activity</button>
+    </div>
+    <div id="activity-form" class="card p-4 shadow-sm mx-auto" style="max-width: 500px;">
         <form method="post">
             {% csrf_token %}
-            {{ form }}
-            <button>Iniciar</button>
+            <div class="mb-3">
+                <label for="id_activity" class="form-label">Activity:</label>
+                {{ form.activity }}
+            </div>
+            <div class="text-end">
+                <button class="btn btn-success">Start</button>
+            </div>
         </form>
     </div>
+    
 {% endif %}
 {% endblock %}
 
