--- a/user_auth/templates/register.html
+++ b/user_auth/templates/register.html
@@ -8,7 +8,7 @@
         <div class="col-12 col-md-6 col-lg-4">
             <div class="card shadow-sm border-0">
                 <div class="card-header bg-primary text-white text-center py-3">
-                    <h2 class="mb-0">Sign Up</h2>
+                    <h2 class="mb-0">Register</h2>
                 </div>
                 <div class="card-body p-4">
                     <form method="post" novalidate>
@@ -40,7 +40,7 @@
                             </div>
                         </div>
                         <div class="d-grid">
-                            <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
+                            <button type="submit" class="btn btn-primary btn-block">Register</button>
                         </div>
                     </form>
                 </div>
