--- a/user_auth/templates/login.html
+++ b/user_auth/templates/login.html
@@ -8,7 +8,7 @@
         <div class="col-12 col-md-6 col-lg-4">
             <div class="card shadow-sm border-0">
                 <div class="card-header bg-primary text-white text-center py-3">
-                    <h2 class="mb-0">Sign In</h2>
+                    <h2 class="mb-0">Login</h2>
                 </div>
                 <div class="card-body p-4">
                     <form method="post" novalidate>
@@ -27,7 +27,7 @@
                             </div>
                         </div>
                         <div class="d-grid">
-                            <button type="submit" class="btn btn-primary btn-block">Sign In</button>
+                            <button type="submit" class="btn btn-primary btn-block">Login</button>
                         </div>
                         <div class="mt-3 text-center">
                             <a href="{% url 'password_reset' %}" class="text-decoration-none text-primary">Forgot Password?</a>
