feat(gymtracker): add workout details page and implement sets
- Added new workout details page to display exercises and their sets.
- Implemented sets functionality in the intermediate ExerciseWorkout table.
- Updated templates and views for better integration.
- Removed old routines_details.html file in favor of workout_detail.html.

Changes:
- Updated models to include sets in ExerciseWorkout.
- Modified URLs and views to support workout details page.
- Enhanced UI for routines and workout creation pages.# Please enter the commit message for your changes. Lines starting

--- a/gymtracker/templates/gymtracker/create_workout.html
+++ b/gymtracker/templates/gymtracker/create_workout.html
@@ -14,7 +14,7 @@
             <h2 class="card-title mb-0">Create New Routine</h2>
         </div>
         <div class="card-body">
-            <form action="{% url 'crear_rutina' %}" id="myForm" method="post">
+            <form action="{% url 'create_workout' %}" id="myForm" method="post">
                 {% csrf_token %}
                 <div class="mb-3">
                     {{ form.as_p }}
