chore(core): update nav link rutinas to workouts

--- a/core/templates/layouts/base.html
+++ b/core/templates/layouts/base.html
@@ -37,7 +37,7 @@
                                     Workouts
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="routinesDropdown">
-                                    <li><a class="dropdown-item" href="{% url 'rutinas' %}">Workouts List</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'workouts' %}">Workouts List</a></li>
                                 </ul>
                             </li>
 
