--- a/core/templates/layouts/base.html
+++ b/core/templates/layouts/base.html
@@ -70,9 +70,9 @@
         </nav>
     </header>
 
-    <main class="container my-4">
+    <main class="container my-4" id="main-container">
         {% if messages %}
-        <div class="alert-container">
+        <div class="alert-container" id="alert-container">
             {% for message in messages %}
                 <div class="alert {{ message.tags }} alert-dismissible fade show" role="alert">
                     {{ message }}
